# profitscout-engine

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DASHBOARD_GENERATOR_PLAN.md  Dockerfile.scanner  FAIL_FAST_PLAN.md  IMPROVEMENT_PLAN.md  LICENSE  LINKEDIN_DRAFT.md  LINKEDIN_TOKEN_EFFICIENCY_CASE_STUDY.md  MOMENTUM_SCANNER_COMPLETE.md  PIPELINE_ENHANCEMENT_PLAN.txt  PROMPT-DEPLOY-MOMENTUM-SCANNER.md  PROMPT-MOMENTUM-SCANNER.md  README.md  SPEC-SCORING-V2.md  check_317.py  check_317_full.py  deploy_enrichment.sh  deploy_functions.sh  fetch_images.py  fix_317_manual.py  fix_reports.py  fix_reports_regex.py  gammamolt-hello.txt  macro_news_test.json  profitscout_review_report.md  pyproject.toml  reanme_recs.py  requirements.txt  score_count.py  server_scanner.py  test_firestore.py  test_news_lrcx.py  ticker_uris.json  workflow.yaml
.gemini/: GEMINI.MD
agent-arena/: Dockerfile  README.md  agents.py  config.py  create_tables.sql  debate.py  deploy.sh  main.py  mcp_client.py  requirements.txt  storage.py
app_data/: fetch_images.py
backtesting_and_research/: analyze_cohorts.py  analyze_entry_time.py  analyze_stability.py  analyze_sweep.py  analyze_target_stop.py  chronological_holdout.py  deep_pattern_analysis.py  monte_carlo_expectancy.py  monte_carlo_v2_regime.py  optimal_liquidity_premium_2.py  premium_eda.py  run_sweep.py  simulate_live_execution.py  tune_vix_thresholds.py
data_aggregator/: main.py  requirements.txt
data_bundler/: complete_tickers.txt  config.py  main.py  test.py
data_pipeline/: workflow.yaml
docs/: ARCHITECTURE.md  DATA-CONTRACTS.md  TESTING.md  TRADING-STRATEGY.md
enrichment-trigger/: deploy.sh  main.py
(+474 files in other folders)
